--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,62 @@
 version: 2.1
 jobs:
-  build:
+  Hello-World:
     docker:
       - image: cimg/base:2021.04
     steps:
       - run:
-          name: Before checkout
-          command: |
-            ls -al
-            echo 'Before checkout'
-      - checkout
-      - run:
-          name: The First Step
+          name: Saying Hello
           command: |
             echo 'Hello World!'
             echo 'This is the delivery pipeline'
+  Fetch-Code:
+    docker:
+      - image: cimg/base:2021.04
+    steps:
+      - checkout
       - run:
-          name: The Second Step
+          name: Getting the code
           command: |
             ls -al
-            echo '^^^The files in your repo^^^'
+            echo '^^^Your repo files^^^'
+  Using-Code:
+    docker:
+      - image: cimg/node:17.2
+    steps:
+      - run:
+          name: Running the Node Container
+          command: |
+            node -v
+
+workflows:
+  Example-Workflow:
+    jobs:
+      - Hello-World
+      - Fetch-Code:
+          requires:
+            - Hello-World
+      - Using-Node:
+          requires:
+            - Fetch-Code
+
+
+  # build:
+  #   docker:
+  #     - image: cimg/base:2021.04
+  #   steps:
+  #     - run:
+  #         name: Before checkout
+  #         command: |
+  #           ls -al
+  #           echo 'Before checkout'
+  #     - checkout
+  #     - run:
+  #         name: The First Step
+  #         command: |
+  #           echo 'Hello World!'
+  #           echo 'This is the delivery pipeline'
+  #     - run:
+  #         name: The Second Step
+  #         command: |
+  #           ls -al
+  #           echo '^^^The files in your repo^^^'
