--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,45 +1,5 @@
-version: 2.1
-jobs:
-  Hello-World:
-    docker:
-      - image: cimg/base:2021.04
-    steps:
-      - run:
-          name: Saying Hello
-          command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
-  Fetch-Code:
-    docker:
-      - image: cimg/base:2021.04
-    steps:
-      - checkout
-      - run:
-          name: Getting the code
-          command: |
-            ls -al
-            echo '^^^Your repo files^^^'
-  Using-Node:
-    docker:
-      - image: cimg/node:17.2
-    steps:
-      - run:
-          name: Running the Node Container
-          command: |
-            node -v
-
-workflows:
-  Example-Workflow:
-    jobs:
-      - Hello-World
-      - Fetch-Code:
-          requires:
-            - Hello-World
-      - Using-Node:
-          requires:
-            - Fetch-Code
-
-
+# version: 2.1
+# jobs:
   # build:
   #   docker:
   #     - image: cimg/base:2021.04
@@ -60,3 +20,109 @@ workflows:
   #         command: |
   #           ls -al
   #           echo '^^^The files in your repo^^^'
+
+# Part 3
+# version: 2.1
+# jobs:
+#   # Job to print stuff on terminal
+#   Hello-World:
+#     docker:
+#       - image: cimg/base:2021.04
+#     steps:
+#       - run:
+#           name: Saying Hello
+#           command: |
+#             echo 'Hello World!'
+#             echo 'This is the delivery pipeline'
+#   # Checkout aka grab your repo into the container/vm and list
+#   Fetch-Code:
+#     docker:
+#       - image: cimg/base:2021.04
+#     steps:
+#       - checkout
+#       - run:
+#           name: Getting the code
+#           command: |
+#             ls -al
+#             echo '^^^Your repo files^^^'
+#   # Grab node version
+#   Using-Node:
+#     docker:
+#       - image: cimg/node:17.2
+#     steps:
+#       - run:
+#           name: Running the Node Container
+#           command: |
+#             node -v
+# # Creating a workflow
+# workflows:
+#   # Generate a workflow called 'Example-Workflow'
+#   Example-Workflow:
+#     jobs:
+#       - Hello-World
+#       - Fetch-Code:
+#           requires:
+#             - Hello-World
+#       - Using-Node:
+#           requires:
+#             - Fetch-Code
+
+
+# Part 4
+version: 2.1
+jobs:
+  Hello-World:
+    docker:
+      - image: alpine:3.15
+    steps:
+      - run:
+          name: Saying Hello
+          command: |
+            echo 'Hello World!'
+            echo 'This is the delivery pipeline'
+  Fetch-Code:
+    docker:
+      - image: cimg/base:2021.04
+    steps:
+      - checkout
+      - run:
+          name: Getting the Code
+          command: |
+            ls -al
+            echo '^^^Your repo files^^^'
+  # running a node container
+  Using-Node:
+    docker:
+      - image: cimg/node:17.2
+    steps:
+      - run:
+          name: Running the Node Container
+          command: |
+            node -v
+  Now-Complete:
+    docker:
+      - image: alpine:3.15
+    steps:
+      - run:
+          name: Approval Complete
+          command: |
+            echo 'The work is now complete'
+
+workflows:
+  Example-Workflow:
+    jobs:
+      - Hello-World
+      - Fetch-Code:
+          requires:
+            - Hello-World
+      - Using-Node:
+          requires:
+            - Fetch-Code
+      - Hold-for-Approval:
+          type: approval
+          requires:
+            - Using-Node
+            - Fetch-Code
+      - Now-Complete:
+          requires:
+            - Hold-for-Approval
